Fix drop cap vertical position
Why:

* We increased the line height of the text body which caused the drop
  cap to be slightly misaligned.

This change addresses the issue by:

* Manually tweaking the position for all browsers to get pixel perfect
  positioning when we have JavaScript in the browser.

--- a/src/components/blog/post/body.module.scss
+++ b/src/components/blog/post/body.module.scss
@@ -31,17 +31,35 @@
 
     font-family: "Acta Display subset", serif;
     font-size: 56px;
-    line-height: 56px;
+    line-height: 54px;
 
     @include media(">=desktop") {
-      margin-top: -2px;
+      margin-top: 1px;
 
       font-size: 66px;
-      line-height: 66px;
+      line-height: 58px;
     }
 
     @-moz-document url-prefix() {
-      margin-top: 8px;
+      margin-top: 9px;
     }
+  }
+
+  &.macos > p:first-child::first-letter {
+    @-moz-document url-prefix() {
+      margin-top: 10px;
+    }
+  }
+
+  &.macos.chrome > p:first-child::first-letter {
+    margin-top: 6px;
+  }
+
+  &.safari > p:first-child::first-letter {
+    margin-top: 2px;
+  }
+
+  &.edge > p:first-child::first-letter {
+    margin-top: 4px;
   }
 }
